2008-12-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/include/rtems/rtems/regionmp.h, sapi/include/rtems/config.h,
	sapi/src/exinit.c, score/Makefile.am,
	score/include/rtems/score/object.h,
	score/include/rtems/score/objectmp.h, score/src/objectmp.c: Eliminate
	Object Handler Initialization routine since it was all for MP
	configurations.
	* score/src/object.c: Removed.

2008-12-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/shell/cmds.c: Revert back to public. Used to execute monitor
	commands in test code.

2008-12-18	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libmisc/serdbg/termios_printk.c, libmisc/serdbg/termios_printk.h:
	Fixed incompatible return value.

	* libmisc/cpuuse/cpuusagereport.c: Changed output format.

	* libmisc/Makefile.am, libmisc/monitor/mon-editor.c: New file.

	* libmisc/capture/capture-cli.c, libmisc/monitor/mon-command.c,
	libmisc/monitor/mon-monitor.c, libmisc/monitor/mon-object.c,
	libmisc/monitor/mon-prmisc.c, libmisc/monitor/mon-symbols.c,
	libmisc/monitor/monitor.h, libmisc/shell/cat_file.c,
	libmisc/shell/cmds.c, libmisc/shell/internal.h,
	libmisc/shell/main_help.c, libmisc/shell/shell.c,
	libmisc/shell/shell.h, libmisc/shell/shell_cmdset.c,
	libmisc/shell/shell_getchar.c, libmisc/shell/str2int.c: Various global
	data is now read only.  Added 'const' qualifier to many pointer
	parameters.  It is no longer possible to remove monitor commands.
	Moved monitor line editor into a separate file to avoid unnecessary
	dependencies.

2008-12-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sapi/include/rtems/extension.h, sapi/include/rtems/io.h,
	sapi/src/exinit.c, sapi/src/extension.c, sapi/src/io.c,
	score/include/rtems/score/mpci.h, score/include/rtems/score/object.h,
	score/include/rtems/score/thread.h, score/include/rtems/score/tod.h,
	score/include/rtems/score/userext.h,
	score/include/rtems/score/wkspace.h, score/src/coretod.c,
	score/src/mpci.c, score/src/object.c, score/src/thread.c,